                                        - Starting new processes in pStart state
                                        - 'AssignNewChild' now called at the 'correct' location
                                        - Text formatting beautified
                                        
          07-04-07  Bfo     fcalls      : retword( d[ 0 ] )= newpid added
          07-04-08  Bfo     procstuff   : Internal utils are treated somewhat special 
                                          => can't active nativce's father
          07-04-08  Bfo     fileaccess  : No longer dependent on "Volumes", same treatment MacOSX/Linux
          07-04-08  Bfo     utilstuff   : Linux file names are treated case sensitively again
                                          (only Hash itself can't distinguish)
          
    3.37  07-04-??  Bfo
    ------------------- 
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux/MacOSX telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -  (SCSI subsystem for Linux)
    -   direct line editing on Linux (over network)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   termcap support for the DOS window.
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/